<resources>
    <string name="app_name">Inter-Act</string>
    <string name="main_IA_type">Interaction Type</string>
    <string name="main_send_button">Inter-Act!</string>
    <string name="main_radio_feedback">Feedback</string>
    <string name="main_radio_appreciation">Appreciation</string>
    <string name="main_event_name">Event Name</string>
    <string name="all_description">Description</string>
    <string name="main_suggestion_hint">Enter Suggestions Here</string>
    <string name="all_register">Register</string>
    <string name="all_name">Name</string>
    <string name="all_email">Email</string>
    <string name="all_password">Password</string>
    <string name="auth_token_pref">AuthenticationToken</string>
    <string name="all_select_date">Select Date</string>
    <string name="all_add_time">Add Time</string>
    <string-array name="event_types">
        <item>On The Floor Meeting</item>
        <item>Planning</item>
        <item>Review</item>
        <item>Retrospective</item>
        <item>Refinement</item>
        <item>General Meeting</item>
        <item>One-to-one</item>
        <item>TownHall</item>
        <item>Custom Event</item>
    </string-array>
    <string name="title_activity_scrolling_form">New InterAction</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">InterAct</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">Username</string>
    <string name="authentication_url"><![CDATA[http://ec2-13-232-93-147.ap-south-1.compute.amazonaws.com:8080/tos-app/oauth/token?grant_type=password&username=tosadminuser&password=tosadminuser]]></string>
    <string name="authentication_key_basic">Basic bXktdHJ1c3RlZC1jbGllbnQ6c2VjcmV0</string>
    <string name="url_employees">http://ec2-13-232-93-147.ap-south-1.compute.amazonaws.com:8080/tos-app/tos/employees/?access_token=</string>
    <string name="url_feedbacks">http://ec2-13-232-93-147.ap-south-1.compute.amazonaws.com:8080/tos-app/tos/feedbacks/?access_token=</string>
    <string name="menu_new_interaction">New InterAction</string>
    <string name="menu_received_interaction">Received InterActions</string>
    <string name="menu_sent_interaction">Sent InterActions</string>
    <string name="all_settings">Settings</string>
    <string name="all_invalid_credentials">Invalid credentials</string>
    <string name="register_successful">Registration successful</string>
    <string name="register_unsuccessful">Registration unsuccessful</string>
    <string name="all_under_dev">This feature is coming soon!</string>
    <string name="all_custom_event_name">Custom Event Name</string>
    <string name="all_event_name">Event Name</string>
    <string name="to_email_content_description">To Email Logo</string>
    <string name="all_feedback">Feedback</string>
    <string name="all_appreciation">Appreciation</string>
    <string name="all_anonymous">Anonymous</string>
    <string name="all_not_anonymous">Not Anonymous</string>
    <string name="all_pick_time">Time</string>
    <string name="title_activity_received_interaction">ReceivedInteractionActivity</string>
    <string name="navigation_drawer_open">Oopsie</string>
    <string name="navigation_drawer_close">Noopsie</string>
    <string name="main_context_hint">Enter Context</string>
    <string name="all_send">Send</string>
    <string name="all_suggestions">Suggestions</string>
    <string name="all_context">Context</string>
    <string name="all_observation">Observation</string>
    <string name="all_event_date">Event Date: </string>
    <string name="all_get_users_url">http://10.0.2.2:8080/interact-app/users</string>
    <string name="app_base_url">http://ec2-13-232-93-147.ap-south-1.compute.amazonaws.com:8001/interact-app</string>
    <string name="button_back_text">Back</string>
    <string name="button_next_text">Next</string>
    <string name="slide_description_text">Sample random text bla bla</string>
    <string name="slide_heading_text">Random heading lol</string>
    <string name="all_finish">Finish</string>
</resources>
