<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_new_interaction"
            android:icon="@drawable/ic_new_interaction"
            android:title="@string/menu_new_interaction" />
        <item
            android:id="@+id/menu_received_interaction"
            android:icon="@drawable/ic_received_interaction"
            android:title="@string/menu_received_interaction" />
        <item
            android:id="@+id/menu_sent_interaction"
            android:icon="@drawable/ic_sent_interaction"
            android:title="@string/menu_sent_interaction" />
    </group>
    <group>
        <item
            android:checkable="true"
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings"
            android:title="@string/all_settings" />
    </group>
</menu>