<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/registerTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_register"
        android:textStyle="bold"
        android:textSize="22sp"
        android:padding="5dp"/>
    <TextView
        android:id="@+id/registerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="5dp"/>
    <EditText
        android:id="@+id/registerNameEditText"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/registerEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_email"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="5dp"/>
    <EditText
        android:id="@+id/registerEmailEditText"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/registerPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="5dp"/>
    <EditText
        android:id="@+id/registerPasswordEditText"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_register"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:layout_margin="15dp"
        android:background="@color/colorLightRed"
        android:clickable="true"/>

</LinearLayout>