<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_scrolling_form_parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/colorWhite"
    tools:context=".Activities.ScrollingFormActivity"
    tools:showIn="@layout/activity_scrolling_form">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/AppTheme"
        android:background="@color/colorWhite"
        android:padding="5dp">

        <!-- Layout for EMAIL -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginTop="3dp"
                android:contentDescription="@string/to_email_content_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:tint="@color/colorPrimaryDark"
                android:src="@drawable/ic_contact"/>

            <!-- To Email Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_interaction_email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/all_email"
                android:textColorHint="@color/colorSecondaryDark">
                <AutoCompleteTextView android:id="@+id/new_interaction_email_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/all_email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <!-- Layout for Event Details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginTop="3dp"
                android:contentDescription="@string/to_email_content_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="16dp"
                android:tint="@color/colorPrimaryDark"
                android:src="@drawable/ic_event"/>
            <TextView
                android:id="@+id/new_interaction_event_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_event_name"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/new_interaction_event_spinner"
                android:spinnerMode="dropdown"
                android:prompt="@string/all_event_name"
                android:layout_width="match_parent"
                android:popupElevation="8dp"
                android:popupBackground="@color/colorWhite"
                android:textAlignment="center"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <EditText
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="55dp"
            android:id="@+id/new_interaction_event_edit_text"
            android:inputType="text"
            android:visibility="gone"
            android:hint="@string/all_custom_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="1dp"/>

        <FrameLayout
            android:paddingStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/new_interaction_date_time_picker_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"/>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <!-- Description -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:tint="@color/colorPrimaryDark"
                android:src="@drawable/ic_feedback"/>
            <LinearLayout
                android:layout_gravity="start"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ToggleButton
                    android:id="@+id/new_interaction_interaction_toggle_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_weight="7"
                    android:background="@drawable/amber_green_transition"
                    android:textColor="@color/colorWhite"
                    android:elevation="3dp"
                    android:padding="8dp"
                    android:textOff="@string/all_feedback"
                    android:textOn="@string/all_appreciation" />

                <TextView
                    android:padding="8dp"
                    android:layout_weight="4"
                    android:id="@+id/new_interaction_quote_text_view"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorSecondaryDark"
                    android:text="Awesome quote will be displayed here"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <!-- To Email Label -->
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingStart="55dp"
            android:id="@+id/new_interaction_description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_observation"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorSecondaryDark">
            <EditText android:id="@+id/new_interaction_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:minLines="1"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideOverlay"
                android:maxLines="4"
                android:inputType="textAutoComplete"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="8dp"
            android:paddingStart="55dp"
            android:id="@+id/new_interaction_context_input_layout"
            android:layout_width="match_parent"
            android:hint="@string/all_context"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorSecondaryDark">
            <EditText android:id="@+id/new_interaction_context_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideOverlay"
                android:minLines="1"
                android:maxLines="3"
                android:inputType="textAutoComplete"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingStart="55dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/new_interaction_suggestion_input_layout"
            android:layout_width="match_parent"
            android:hint="@string/all_suggestions"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorSecondaryDark">
            <EditText android:id="@+id/new_interaction_suggestion_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideOverlay"
                android:minLines="1"
                android:maxLines="3"
                android:inputType="textAutoComplete"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_height="wrap_content">

            <TextSwitcher
                android:id="@+id/new_interaction_anonymous_text_switcher"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/all_not_anonymous"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="18sp" />
            <LinearLayout
                android:id="@+id/new_interaction_anonymous_layout"
                android:layout_gravity="right"
                android:gravity="center"
                android:layout_margin="10dp"
                android:layout_width="50dp"
                android:layout_height="35dp">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/new_interaction_anonymous_lottie"
                    android:layout_height="120dp"
                    android:layout_width="145dp"
                    android:layout_margin="5dp"
                    app:lottie_fileName="toggle_switch.json" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>