<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/recipientTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:clickable="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:text="To"/>
            <EditText
                android:id="@+id/recipientEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner_light_grey"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:elevation="1dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/eventNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_event_name"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding="5dp"/>
                <Spinner
                    android:id="@+id/eventSpinner"
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:popupElevation="10dp"
                    android:popupBackground="@color/colorGrey"
                    android:textAlignment="center"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>
            <EditText
                android:id="@+id/eventNameEditText"
                android:inputType="text"
                android:visibility="gone"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="1dp"/>
            <fragment
                android:id="@+id/date_time_fragment"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                class="com.comakeit.inter_act.DateTimePickerFragment">
            </fragment>
        </LinearLayout>

        <TextView
            android:id="@+id/interactionTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/main_IA_type"/>
        <RadioGroup
            android:id="@+id/iaTypeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <RadioButton
                android:id="@+id/radioFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_radio_feedback"/>
            <RadioButton
                android:id="@+id/radioAP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_radio_appreciation"/>
        </RadioGroup>
        <TextSwitcher
            android:id="@+id/descriptionTextSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp" />
        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="18sp"
            android:layout_margin="1dp"/>
        <EditText
            android:hint="@string/main_suggestion_hint"
            android:id="@+id/suggestionEditText"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="2dp"
            android:background="@color/colorGrey"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/main_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:background="@color/colorGreen"
            android:layout_margin="15dp"
            android:hapticFeedbackEnabled="true"
            android:text="@string/main_send_button"
            android:layout_gravity="end"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>